[gd_scene load_steps=11 format=3 uid="uid://dyxsjr04p0cmg"]

[ext_resource type="Texture2D" uid="uid://dn3g8ayidimwk" path="res://images/animation/trounoir_anim.png" id="1_1fkop"]
[ext_resource type="Script" path="res://script/animation/boost_trounoir_anim.gd" id="1_y65pa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kthir"]
radius = 20.025

[sub_resource type="AtlasTexture" id="AtlasTexture_x8eue"]
atlas = ExtResource("1_1fkop")
region = Rect2(0, 0, 19, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_j52i1"]
atlas = ExtResource("1_1fkop")
region = Rect2(19, 0, 19, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef32m"]
atlas = ExtResource("1_1fkop")
region = Rect2(0, 19, 19, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j16k"]
atlas = ExtResource("1_1fkop")
region = Rect2(19, 19, 19, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3rlu"]
atlas = ExtResource("1_1fkop")
region = Rect2(0, 38, 19, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8ndv"]
atlas = ExtResource("1_1fkop")
region = Rect2(19, 38, 19, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_lybti"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8eue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j52i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef32m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j16k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3rlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8ndv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="boost_trounoir" type="Node2D"]
script = ExtResource("1_y65pa")

[node name="boost_trounoir_area" type="Area2D" parent="."]
collision_layer = 8

[node name="boost_trounoir_collision" type="CollisionShape2D" parent="boost_trounoir_area"]
shape = SubResource("CircleShape2D_kthir")

[node name="boost_trounoir_animation" type="AnimatedSprite2D" parent="boost_trounoir_area/boost_trounoir_collision"]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_lybti")
frame_progress = 0.163868
